--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,8 +1,8 @@
 node{
   def mavenHome = tool name:"maven-3.8.7"
   
-  //echo "GitHub BranhName ${env.BRANCH_NAME}"
-  //echo "Jenkins Job Number is: -->  ${env.BUILD_NUMBER}"
+  echo "GitHub BranhName ${env.BRANCH_NAME}"
+  echo "Jenkins Job Number is: -->  ${env.BUILD_NUMBER}"
   echo "Jenkins Node Name is: --> ${env.NODE_NAME}"
   
   echo "Jenkins Home is: --> ${env.JENKINS_HOME}"
@@ -19,11 +19,11 @@ node{
   sh"${mavenHome}/bin/mvn clean package"
   }
   
-  
   stage ('SonarQubeReport') {
   sh"${mavenHome}/bin/mvn clean sonar:sonar"
   }
   
+  /*
   stage ('uploadeArtifactIntoNexus') {
   sh"${mavenHome}/bin/mvn clean deploy"
   }
@@ -34,6 +34,8 @@ node{
     sh "scp -o StrictHostKeyChecking=no target/maven-web-application.war ec2-user@54.169.128.208:/opt/tomcat/webapps/"
   }
   }
+  
+  */
   
   stage ('SendEmailNotification') {
   emailext body: '''Build over..
