--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,4 +1,4 @@
-node{
+node('nodes'){
   def mavenHome = tool name:"maven-3.8.7"
   
   echo "GitHub BranhName ${env.BRANCH_NAME}"
@@ -19,11 +19,11 @@ node{
   sh"${mavenHome}/bin/mvn clean package"
   }
   
+  /*
   stage ('SonarQubeReport') {
   sh"${mavenHome}/bin/mvn clean sonar:sonar"
   }
   
-  /*
   stage ('uploadeArtifactIntoNexus') {
   sh"${mavenHome}/bin/mvn clean deploy"
   }
